# stb-project

./: .env.example  .gitignore  Dockerfile  PROJECT_README.md  README.md  STB.postman_collection.json  docker-compose.yml  pyproject.toml  requirements.txt
app/: README.md  config.py  main.py
app/api/v1/: locations.py
app/llm/: generate_image_info.py  generate_place_description.py  generate_top_offerings.py
app/schemas/: request.py  response.py
app/services/google/: photos.py  places.py
app/utils/: services_formatter.py
